resources/CSS/style.css
*{
    margin: 0;
    padding: 0;
    list-style: none;
    text-decoration: none;
    color: black;
    box-sizing: border-box;
}
*::-webkit-scrollbar {
    display: none;
}
html{
    scroll-behavior: smooth;
}
h1{
    font-weight: 400;
}
h2{
    margin: 1rem 0;
    font-weight: 400;
}
h3{
    margin: 1rem 0;
    font-weight: 500;
}
.centered{
    text-align: center;
}
.fullwidth{
    width: 100vw;
    margin: 2rem 0;
}
body{
    box-sizing: border-box;
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;
    font-family: 'Montserrat', sans-serif;
    overflow-x: hidden;
    width: 100vw;
}
.scroll-disabled{
    overflow: hidden;
}
header{
    height: 8vh;
    width: 100vw;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    background-color: rgba(0,0,0,0);
    position: fixed;
    top: 0;
    z-index: 3;
    transition: all 0.5s ease;
}
header:hover{
    background-color: rgb(39, 39, 39);
    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.2);
}
.navbar{
    display: flex;
}
.navbar li{
    margin: 0 1rem;
}
.navbar a{
    color: white;
}
.navbar li::after {
    content: '';
    display: block;
    margin: auto;
    height: 1px;
    width: 0px;
    background: rgb(255, 255, 255);
    transition: all 0.1s linear;
}
.navbar li:hover::after {
width: 100%;
}
.burger{
    display: none;
    position: absolute;
    z-index: 2;
    top: 1rem;
    right: 1rem;
    flex-direction: column;
    justify-content: space-between;
    height: 1.2rem;
    cursor: pointer;
}
.burger div{
    width: 30px;
    height: 3px;
    background-color: rgb(255, 255, 255); /* COLORS */
    transition: all 0.3s ease;
    border-radius: 3px;
}
.toggle .line1{    
    transform: rotate(-45deg) translate(-3px,9px);
}
.toggle .line2{    
    opacity: 0;
}
.toggle .line3{    
    transform: rotate(45deg) translate(-3px,-9px);
}
/* MAIN PART */
/* floating text animation */
@keyframes slide-in {
    0%{
        opacity: 0;
    }
    10%{
        opacity: 0;
    }
    100%{
        transform: translate3d(2rem, 0, 0);
        opacity: 1;
    }
}
@keyframes fadeSwitch {
    0%{
        opacity: 1;
    }
    100%{
        opacity: 0;
    }
}
.section{
    min-height: 100vh;
    padding: 3rem 0;
    background-color: white;
    position: relative;
    z-index: 3;
}
.one{
    background: url("../images/curanakrevetu.jpg") bottom/cover;
    transition: all 1s ease; 
    min-height: 90vh;
    height: 100vh;
    width: 100vw;
    background-attachment: fixed;
    position: relative;
    z-index: 2;
}
.ioscarousell{
    display: none;
}
    /* floating text */
.floating-text{
    position: fixed;
    top: 7rem;
    left: 2rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-shadow: 0 0 0.5rem rgb(0, 0, 0), 0 0 1rem rgb(0, 0, 0);
}
.big-text{
    font-size: 4rem;
    font-weight: 400;
    opacity: 0;
    color: rgb(255, 255, 255);
    padding: 0 1rem;
}
.small-text{
    font-size: 2rem;
    opacity: 0;
    color: rgb(255, 255, 255);
    margin: 0;
    padding: 0 1rem;
}
.ivan{
    transition: slide-in 1s ease-out, floating 6s ease-in-out;
    animation: slide-in 1s forwards 7s/*, floating 20s alternate 18s infinite*/;
}
.miljak{
    transition: slide-in 1s ease-out, floating 6s ease-in-out;
    animation: slide-in 1s forwards 5s/*, floating 22s alternate 18s infinite*/;
}
.lifestyle{
    transition: slide-in 1s ease-out, floating 6s ease-in-out;
    animation: slide-in 2s forwards 9s/*, floating 20s alternate  18s infinite*/;
}
.hotel{
    transition: slide-in 1s ease-out, floating 6s ease-in-out;
    animation: slide-in 2s forwards 7s/*, floating 19s alternate  18s infinite*/;
}
.food{
    transition: slide-in 1s ease-out, floating 6s ease-in-out;
    animation: slide-in 3s forwards 8s/*, floating 21s alternate  18s infinite*/;
}
.experience{
    transition: slide-in 1s ease-out, floating 6s ease-in-out;
    animation: slide-in 3s forwards 8.5s/*, floating 20s alternate-reverse 18s infinite*/;
}
.photography{
    transition: slide-in 1s ease-out, floating 6s ease-in-out;
    animation: slide-in 1s forwards 5s/*, floating 22s alternate-reverse 18s infinite*/;
    font-size: 3rem;
}
    /* floating text */
    /* slogan */
@keyframes fadeout {
    0% {opacity: 1;}
    50% {opacity: 1;}
    100% { opacity: 0;}
}
.whiteout{
    width: 100vw;
    height: 100vh;
    position:absolute;
    top: 0;
    z-index: 3;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    /* preload images for carousell */
    background: linear-gradient(to right, rgb(50,50,50),rgb(50,50,50)), url("../images/curanakrevetu.jpg"), url("../images/dorucak.jpg"), url("../images/wellness2.jpg"), url("../images/terasa.jpg"), url("../images/zalazak2.jpg") bottom/cover;
    transition: all 2s ease-in-out;
}
.whiteout h1{
    font-size: 3rem;
    color: rgba(45,45,45);
}
.whiteout img{
    min-width: 2rem;
    max-width: 5rem;
    opacity: 0.1;
}
.hide{
    opacity: 0;
}
.disable{
    display: none;
}
.white{
    color: white;
    text-shadow: 0 0 0.5rem rgb(0, 0, 0), 0 0 1rem rgb(0, 0, 0);
}
.slogan{
    width: 100%;
    text-align: center;
    position: fixed;
    z-index: 3;
    top: 90vh;
    font-size: 2rem;
    text-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.5);
}
.first{
    transition: all 2s ease;
    color: white;
}
.second{
    transition: all 2s ease;
    color: white;
}
    /* slogan */
/* MAIN PART */
/* SECTION TWO about and contact form */
.about{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}
.text{
    min-width: 20rem;
    max-width: 45rem;
    padding-right: 3rem;
    margin-bottom: 3rem;
}
.contact-form{
    height: 30rem; 
    border-radius: 0.3rem;
    display: flex;
    flex-direction: column;
    box-sizing: border-box;
    padding: 1rem;
    box-shadow: 0 0.5rem 1rem rgb(70,70,70, 0.5);
}
form{
    display: flex;
    flex-direction: column;
    align-items: stretch;
}
/* ... */

